Massive refactor of file storage
This moves files out of external storage into the sqlite database.
This allows for exporting of an entire project as one file.

This also slightly changes the bot object as `code` field is no
longer accurate
